tests/ui/borrowck/borrowck-loan-of-static-data-issue-27616.stderr
error[E0506]: cannot assign to `*s` because it is borrowed
  --> $DIR/borrowck-loan-of-static-data-issue-27616.rs:16:5
   |
LL |     let alias: &'static mut String = s;
   |                -------------------   - `*s` is borrowed here
   |                |
   |                type annotation requires that `*s` is borrowed for `'static`
...
LL |     *s = String::new();
   |     ^^ `*s` is assigned to here but it was already borrowed

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0506`.
